Remove swagger docs from mentor controller.
